--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-Hello World
+<!doctype html>
+
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>alexandercurtis.github.io</title>
+  <meta name="description" content="Demos of stuff by alexandercurtis">
+  <meta name="author" content="Alexander Curtis">
+  <style>body { font-family: sans-serif; font-size: 16px; }</style>
+</head>
+
+<body>
+  <h1>Demos</h1>
+  <h2><a href="zbox/zbox.html">zbox</a></h2>
+  <p>jQuery - Image lightbox with zoom.</p>
+</body>
+</html>
