--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
   <h1>Demos</h1>
   <h2><a href="zbox/zbox.html">zbox</a></h2>
   <p>jQuery - Image lightbox with zoom.</p>
+  <h2><a href="fx451/fx451.html">fx451</a></h2>
+  <p>fx451 simulator in Javascript (an old Casio calculator)</p>
 </body>
 </html>
