Less protective these days
Still, don't rip me off please!

--- a/fx451/fx451.html
+++ b/fx451/fx451.html
@@ -18,8 +18,7 @@ http://www.casionz.co.nz/Site/Pronto/Files/user_manuals/FX451%20USER%20MANUAL.PD
   </head>
   <body onload="DrawDisplay();">
     <h1>Casio fx451 calculator simulator</h1>
-    <h2>by Alex Curtis</h2>
-    <h3>Copyright (c) 2009</h3>
+    <h2>by Alex Curtis, 2009</h2>
     <div style="position:relative;">
         <map name="calcMap" id="calc">
           <area alt="0" coords="57,397,85,417" href="javascript:ButtonPressed(EButton.zero)" shape="rect" />
