Remove underline on zbox demo page

--- a/zbox/zbox.html
+++ b/zbox/zbox.html
@@ -6,6 +6,7 @@
     <link type="text/css" rel="stylesheet" media="all" href="jquery.zbox.css" />
     <style>
       body { font-family: sans-serif; font-size: 16px; }
+      a { text-decoration: none; }
     </style>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="jquery.zbox.min.js"></script>
