--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@
   <p>jQuery - Image lightbox with zoom.</p>
   <h2><a href="fx451/fx451.html">fx451</a></h2>
   <p>fx451 simulator in Javascript (an old Casio calculator)</p>
+  <h2><a href="freecell/freecell-large.html">freecell</a></h2>
+  <p>Freecell card game in Javascript</p>
 </body>
 </html>
