Add countdown demo

--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
 <body>
   <h1>Demos</h1>
-  <h2><a href="zbox/zbox.html">zbox</a></h2>
+  <h2>Javascript Projects</h2>
+  <h3><a href="zbox/zbox.html">zbox</a></h3>
   <p>jQuery - Image lightbox with zoom.</p>
-  <h2><a href="fx451/fx451.html">fx451</a></h2>
+  <h3><a href="fx451/fx451.html">fx451</a></h3>
   <p>fx451 simulator in Javascript (an old Casio calculator)</p>
-  <h2><a href="freecell/freecell-large.html">freecell</a></h2>
+  <h3><a href="freecell/freecell-large.html">freecell</a></h3>
   <p>Freecell card game in Javascript</p>
+  <h3><a href="countdown/index.html">countdown</a></h3>
+  <p>Interprets crontab strings and shows countdown to next event</p>
 </body>
 </html>
