Add matrix demo

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@
   <p>Freecell card game in Javascript</p>
   <h3><a href="countdown/index.html">countdown</a></h3>
   <p>Interprets crontab strings and shows countdown to next event</p>
+  <h3><a href="matrix/Matrix.svg">matrix</a></h3>
+  <p>Interactive SVG demonstrating properties of a 2x2 matrix</p>
 </body>
 </html>
