--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!doctype html>
-
-<html lang="en">
+<html lang="en-GB">
 <head>
-  <meta charset="utf-8">
-  <title>alexandercurtis.github.io</title>
-  <meta name="description" content="Demos of stuff by alexandercurtis">
-  <meta name="author" content="Alexander Curtis">
-  <style>body { font-family: sans-serif; font-size: 16px; }</style>
+  <meta charset="utf-8"/>
+  <title>Software Developer - Alexander Curtis</title>
+  <meta name="description" content="Alexander Curtis is a full stack consultant software engineer."/>
+  <meta name="author" content="Alexander Curtis"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,300italic,500' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="css/main.css"/>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/brands.css" integrity="sha384-BKw0P+CQz9xmby+uplDwp82Py8x1xtYPK3ORn/ZSoe6Dk3ETP59WCDnX+fI1XCKK" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
+  <link rel="icon" type="image/png" href="images/flipflop-bk-16.png"/>
+  <link rel="icon" type="image/png" href="images/flipflop-dk-32.png"/>
 </head>
-
 <body>
-  <h1>Demos</h1>
-  <h2>Javascript Projects</h2>
-  <h3><a href="zbox/zbox.html">zbox</a></h3>
-  <p>jQuery - Image lightbox with zoom.</p>
-  <h3><a href="fx451/fx451.html">fx451</a></h3>
-  <p>fx451 simulator in Javascript (an old Casio calculator)</p>
-  <h3><a href="freecell/freecell-large.html">freecell</a></h3>
-  <p>Freecell card game in Javascript</p>
-  <h3><a href="countdown/index.html">countdown</a></h3>
-  <p>Interprets crontab strings and shows countdown to next event</p>
-  <h3><a href="matrix/Matrix.svg">matrix</a></h3>
-  <p>Interactive SVG demonstrating properties of a 2x2 matrix</p>
+<header>
+  <div class="hero" style="background-image: url('images/hero-image-03.jpg'); background-position: 50% 0;">
+    <div class="hero-content centred">
+      <h1>ALEXANDER CURTIS</h1>
+      <h2>Software Developer</h2>
+      <ul id="social" class="horizontal">
+        <li><a href="https://medium.com/@alexc73"><i class="fab fa-medium-m"></i></a></li>
+        <li><a href="https://twitter.com/alexoncode"><i class="fab fa-twitter"></i></a></li>
+        <li><a href="https://github.com/alexandercurtis"><i class="fab fa-github"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</header>
 </body>
 </html>
