--- a/zbox/zbox.html
+++ b/zbox/zbox.html
@@ -8,7 +8,7 @@
       body { font-family: sans-serif; font-size: 16px; }
       a { text-decoration: none; }
     </style>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="jquery.zbox.min.js"></script>
     <script type="text/javascript">
       //<![CDATA[
