Add backlink to Mastodon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/fontawesome.css" integrity="sha384-4aon80D8rXCGx9ayDt85LbyUHeMWd3UiBaWliBlJ53yzm9hqN21A+o1pqoyK04h+" crossorigin="anonymous">
   <link rel="icon" type="image/png" href="images/flipflop-bk-16.png"/>
   <link rel="icon" type="image/png" href="images/flipflop-dk-32.png"/>
+  <link rel="me" href="https://mastodon.social/@alectronic"/>
 </head>
 <body>
 <header>
